# SAM-Android-ncnn

./: README.md  gradle.properties  local.properties
app/: build.gradle
app/src/main/java/com/tencent/ncnnyolox/: NcnnYolox.java
app/src/main/jni/: CMakeLists.txt  sam.cpp  sam.h  samncnn.cpp  segment_anything.cpp  segment_anything.h  type.h
gradle/wrapper/: gradle-wrapper.properties
